--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
@@ -20,6 +21,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "file-loader": "^6.2.0",
     "typescript": "^5"
   }
 }
