--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@gsap/react": "^2.1.1",
+    "gsap": "^3.12.5",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
